--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,9 @@
 * text=auto eol=lf
-
 # Better diffs for notebooks
 *.ipynb linguist-language=Jupyter+Notebook
-
 # Keep CRLF for Windows-specific scripts if needed
 *.bat eol=crlf
 *.ps1 eol=crlf
+*.bin filter=lfs diff=lfs merge=lfs -text
+*.pt filter=lfs diff=lfs merge=lfs -text
+*.ckpt filter=lfs diff=lfs merge=lfs -text
