--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-torch
-transformers
 pandas
 numpy
+scikit-learn
+matplotlib
+regex
+indic-nlp-library
+sentence-transformers
+transformers
+datasets
 sacrebleu
 streamlit
-indic-nlp-library
-gradio
+tensorflow
+torch
+accelerate
